# brilliant

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.1e28cea  README.md
brilliant-v/: CMakeLists.txt
brilliant-v/test/: CMakeLists.txt
brilliant-v/test/ui_test/: example_mrui.cpp  example_mrui.h
brilliant-v/test/ui_test/resources/: main.lua  theme_default.lua
brilliant-v/ui/: CMakeLists.txt  basic_types.h  imgui_widget_mr.cpp  imgui_widget_mr.h  imgui_yoga_render.cpp  imgui_yoga_render.h  macro_for_each.h  mr_im_widget.cpp  mr_im_widget.h  yoga_imgui_render.cpp  yoga_imgui_render.h  yoga_imgui_widget.cpp  yoga_imgui_widget.h  yoga_lua_layout.cpp  yoga_lua_layout.h  yoya_lua_layout_context.cpp  yoya_lua_layout_context.h
